# src/Services/Nt.Access/Controllers/MediumApi.cs
@@ -8,8 +8,10 @@
  * Generated by: https://github.com/swagger-api/swagger-codegen.git
  */
 
+using System;
 using Microsoft.AspNetCore.Mvc;
 using System.ComponentModel.DataAnnotations;
+using Microsoft.AspNetCore.Http;
 
 namespace Nt.Access.Controllers
 {
@@ -27,9 +29,34 @@ namespace Nt.Access.Controllers
         /// <response code="400"></response>
         [HttpGet]
         [Route("/api/v1/mediums/{mediumId}")]
-        public virtual IActionResult CancellationReasonsGet([FromRoute][Required]string mediumId)
+        public virtual IActionResult MediumInformation([FromRoute][Required]string mediumId)
         {
-            return new ObjectResult(null);
+            try
+            {
+                var information = new Models.Information();
+                information.Currency = "EUR";
+                information.DiscountType = "ABC";
+                //
+                var credit = new Models.Credit();
+                credit.Amount = 1222;
+                //
+                var owner = new Models.Owner();
+                owner.Name = "Norbert Rastl";
+                //
+                information.Credit = credit;
+                information.Owner = owner;
+                return new ObjectResult(information);
+            }
+            catch (Exception ex)
+            {
+                Nt.Logging.Log.Server.Error(ex, HttpContext.Request.Path + "|");
+                var error = new Models.Error();
+                error.Message = ex.Message;
+                error.UserMessage = ex.Message;
+                error.Type = ex.GetType().Name;
+                //500
+                return StatusCode(StatusCodes.Status500InternalServerError, error);
+            }
         }
 
         /// <summary>
